--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
-    --branco: #FFFFFF;
+    --verde: #0365f7;
+    --branco: #bee413;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+    --texto-fundo: rgba(11, 97, 211, 0.3);
 }
 
 
