--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #0365f7;
+    --verde: #0e6dfc;
     --branco: #bee413;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
